--- a/exercicios/ex022/fundo_006.html
+++ b/exercicios/ex022/fundo_006.html
@@ -3,23 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste de imagem de fundo</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('img/wallpaper002.jpg');
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;*/
+            
+            /*Shorthand background: (sequencia)
+            color>image>position>repeat>attachment
+            */
+            
+            background: black url('img/wallpaper002.jpg') center no-repeat fixed ;
+            background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
-            border: 1px solid black;
+            border: 1px solid darkblue;
             border-radius: 10px;
-            background-position: center;
-            background-repeat: no-repeat;
         }
     </style>
 </head>
