--- a/desafios/des_12/desafio_cordel.html
+++ b/desafios/des_12/desafio_cordel.html
@@ -12,7 +12,7 @@
         <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank"><strong>Milton Duarte</strong></a></p>
     </header>
 
-    <section>            
+    <section class="normal">            
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -23,7 +23,7 @@
         </p>            
     </section>
 
-    <section class="section_02">
+    <section class="image" class="section_02">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -35,7 +35,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -58,7 +58,7 @@
         
     </section>
 
-    <section class="section_04">
+    <section class="image" class="section_04">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -70,7 +70,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
