--- a/desafios/des_12/desafio_cordel.html
+++ b/desafios/des_12/desafio_cordel.html
@@ -23,7 +23,7 @@
         </p>            
     </section>
 
-    <section class="image" class="section_02">
+    <section class="image" id="img_01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -58,7 +58,7 @@
         
     </section>
 
-    <section class="image" class="section_04">
+    <section class="image" id="img_02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
