--- a/exercicios/ex023/tabela_01.html
+++ b/exercicios/ex023/tabela_01.html
@@ -11,21 +11,19 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse; /*separa as tabelas por uma linha unica*/        
         }
         
-        tr.linha {
-            background-color: gray;
-        }
-
         td {
             border: 1px solid black;
             padding: 8px;
-            align-items: center;
+            text-align: center; /*alinhameto horizontal*/
+            vertical-align: middle; /*alinhamento vertical*/
         }
 
-        td.dado {
-            background-color: yellowgreen;
+        .numero {
+            text-align: right;
         }
     </style>
 </head>
@@ -43,17 +41,17 @@
             <td>B1</td>
             <td>C1</td>
         </tr>
-        <tr class="linha">  <!--segunda linha--> 
+        <tr>  <!--segunda linha--> 
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">150</td>
         </tr>
         <tr>   <!--terceira linha-->
             <td>A3</td>
-            <td class="dado">B3</td>
-            <td>C3</td>
+            <td>B3</td>
+            <td class="numero">300</td>
         </tr>  <!--quarta linha-->
-        <tr class="linha">  
+        <tr>  
             <td>A4</td>
             <td>B4</td>
             <td>C4</td>
