--- a/exercicios/ex023/tabela_02.html
+++ b/exercicios/ex023/tabela_02.html
@@ -19,9 +19,21 @@
             padding: 10px;
         }
 
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
         thead, tfoot {
             background-color: gray;
             color: white;
+        }
+
+        tbody tr:nth-child(even) { /* efeito zebrado - escolher odd (impar) ou even (par)*/
+            background-color: lightgray;
+
         }
 
         td.num {
@@ -33,18 +45,21 @@
     <h1>Uso de tabelas grandes</h1>
     <!---
         ANATOMIA PARA TABELAS GRANDES:
-        thead
-            tr, td, th
-        tbody
-            tr, td, th
-        tfoot
-            tr, td, th
+        table
+            thead
+                caption (caption - legenda da tabela)
+                tr, td, th
+            tbody
+                tr, td, th
+            tfoot
+                tr, td, th
     -->
     <table>
+        <caption>População das unidades federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>Populacao</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 150px;">Populacao</th>
             </tr>
         </thead>
         <tbody>
@@ -159,7 +174,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de habitantes</th>
+                <th scope="row">Total de habitantes</th>
                 <td class="num"><strong>210 147 125</strong></td>
             </tr>
         </tfoot>
