--- a/exercicios/ex023/tabela_02.html
+++ b/exercicios/ex023/tabela_02.html
@@ -54,7 +54,7 @@
         ANATOMIA PARA TABELAS GRANDES:
         table
             thead
-                caption (caption - legenda da tabela)
+                caption (caption - titulo da tabela)
                 tr, td, th
             tbody
                 tr, td, th
