finalizacao do ex023

--- a/exercicios/ex023/tabela_02.html
+++ b/exercicios/ex023/tabela_02.html
@@ -65,7 +65,7 @@
         <caption>População das unidades federativas</caption>
         <thead>
             <tr>
-                <th scope="col">Estado</th>
+                <th scope="col">Estado</th> <!--scope sao usados apenas nos th e definem o seu tipo de acordo com os dados que estao relacionados: colunas (col) linhas (row), mais de uma coluna (colgroup), etc  -->>
                 <th scope="col" style="width: 150px;">Populacao</th>
             </tr>
         </thead>
